# matanos

./: .gitignore  CMakeLists.txt  Makefile  create_symtable.sh  link.ld
boot/: bootsect.asm  disk.asm  kernel_entry.asm  print_hex.asm  switch_pm.asm
cpu/: idt.c  idt.h  interrupt.asm  isr.c  isr.h  kheap.c  kheap.h  ordered_array.h  paging.c  paging.h  syscall.c  syscall.h  task.c  task.h  timer.c  timer.h
drivers/: keyboard.c  keyboard.h  screen.c  screen.h
kernel/: kernel.c  kernel.h  printf.c  printf.h  shell.c  shell.h  symbols.c  symbols.h  util.c  util.h
